tests/snapshots/cli__changelog_paths_with_filter_includes_only_matching.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* **app:** include app change (<OID>)
---
stderr:
