tests/snapshots/cli__changelog_paths_without_filter_includes_all_commits.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* **lib:** include lib change (<OID>)
* **app:** include app change (<OID>)
---
stderr:
