tests/snapshots/cli__changelog_range_both_tags.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## [v2.0.0](///compare/v1.0.0...v2.0.0) (<DATE>)

### Features

* second feature (<OID>)
---
stderr:
