tests/snapshots/cli__changelog_range_sha_bounds.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## [v2.0.0](///compare/v2.0.0...2.0.0) (<DATE>)

### Features

* second feature (<OID>)
---
stderr:
