tests/snapshots/cli__changelog_range_sha_upper_bound.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## [<OID>](///compare/v3.0.0...<OID>) (<DATE>)

### Features

* unreleased feature (<OID>)

## [v3.0.0](///compare/v2.0.0...v3.0.0) (<DATE>)

### Features

* third feature (<OID>)

## [v2.0.0](///compare/v1.0.0...v2.0.0) (<DATE>)

### Features

* second feature (<OID>)

## v1.0.0 (<DATE>)

### Features

* initial feature (<OID>)
---
stderr:
