tests/snapshots/cli__changelog_succeeds_on_conventional_commits.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* initial conventional commit (<OID>)
---
stderr:
