tests/snapshots/cli__changelog_unreleased_semver_patch_uses_patch_heading.snap
---
source: tests/cli.rs
assertion_line: 165
expression: sanitized
---
stdout:
# Changelog

### v2.0.1 (<DATE>)

#### Features

* unreleased feature (<OID>)

## v2.0.0 (<DATE>)

### Features

* major release (<OID>)

### v1.0.1 (<DATE>)

#### Fixes

* patch release (<OID>)
---
stderr:
