tests/snapshots/cli__changelog_wrap_applies_default_wrapping.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* a very long subject that should exceed the default wrapping limit to verify
behavior (<OID>)
---
stderr:
