tests/snapshots/cli__check_fails_on_non_conventional_branch_commits.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
FAIL  <OID>  first line doesn't match `<type>[optional scope]: <description>`  this is not conventional

1/4 failed
---
stderr:
